generate resources using v1.8.0